proconio/tests/compile-fail/issue_14.rs
use proconio::fastout;

#[fastout]
fn main() {
    println!("-1");
    match 0 {
        _ => println!("1"),
    }
}
